[tool.poetry]
name = "line-notify"
version = "0.1.0"
description = ""
authors = ["8gaU8 <haga.yuya2.2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
